// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Item renders correctly 1`] = `
<div
  className=
      ms-Stack
      ms-Card
      {
        align-items: stretch;
        border-radius: 2px;
        box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
        box-sizing: border-box;
        cursor: default;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: inherit;
        justify-content: flex-start;
        max-width: 286px;
        min-width: 212px;
        outline: none;
        transition: box-shadow 0.5s ease;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-top: 12px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        box-shadow: 0 1.6px 3.6px 0 Highlight, 0 0.3px 0.9px 0 Highlight;
      }
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={-1}
>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
</div>
`;

exports[`Card Item renders correctly when filling up the margins while being the first item in a Horizontal Card 1`] = `
<div
  className=
      ms-Stack
      ms-Card
      {
        align-items: flex-start;
        border-radius: 2px;
        box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
        box-sizing: border-box;
        cursor: default;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        justify-content: flex-start;
        max-width: 500px;
        min-width: 300px;
        outline: none;
        transition: box-shadow 0.5s ease;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 12px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        box-shadow: 0 1.6px 3.6px 0 Highlight, 0 0.3px 0.9px 0 Highlight;
      }
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={-1}
>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 12px;
          margin-left: 0px;
          margin-right: 12px;
          margin-top: 12px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
</div>
`;

exports[`Card Item renders correctly when filling up the margins while being the first item in a Vertical Card 1`] = `
<div
  className=
      ms-Stack
      ms-Card
      {
        align-items: stretch;
        border-radius: 2px;
        box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
        box-sizing: border-box;
        cursor: default;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: inherit;
        justify-content: flex-start;
        max-width: 286px;
        min-width: 212px;
        outline: none;
        transition: box-shadow 0.5s ease;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-top: 12px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        box-shadow: 0 1.6px 3.6px 0 Highlight, 0 0.3px 0.9px 0 Highlight;
      }
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={-1}
>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 12px;
          margin-left: 12px;
          margin-right: 12px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
</div>
`;

exports[`Card Item renders correctly when filling up the margins while being the last item in a Horizontal Card 1`] = `
<div
  className=
      ms-Stack
      ms-Card
      {
        align-items: flex-start;
        border-radius: 2px;
        box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
        box-sizing: border-box;
        cursor: default;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        justify-content: flex-start;
        max-width: 500px;
        min-width: 300px;
        outline: none;
        transition: box-shadow 0.5s ease;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 12px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        box-shadow: 0 1.6px 3.6px 0 Highlight, 0 0.3px 0.9px 0 Highlight;
      }
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={-1}
>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 12px;
          margin-left: 12px;
          margin-right: 0px;
          margin-top: 12px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
</div>
`;

exports[`Card Item renders correctly when filling up the margins while being the last item in a Vertical Card 1`] = `
<div
  className=
      ms-Stack
      ms-Card
      {
        align-items: stretch;
        border-radius: 2px;
        box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
        box-sizing: border-box;
        cursor: default;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: inherit;
        justify-content: flex-start;
        max-width: 286px;
        min-width: 212px;
        outline: none;
        transition: box-shadow 0.5s ease;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-top: 12px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        box-shadow: 0 1.6px 3.6px 0 Highlight, 0 0.3px 0.9px 0 Highlight;
      }
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={-1}
>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 12px;
          margin-right: 12px;
          margin-top: 12px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
</div>
`;

exports[`Card Item renders correctly when filling up the margins while being the middle item in a Horizontal Card 1`] = `
<div
  className=
      ms-Stack
      ms-Card
      {
        align-items: flex-start;
        border-radius: 2px;
        box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
        box-sizing: border-box;
        cursor: default;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        justify-content: flex-start;
        max-width: 500px;
        min-width: 300px;
        outline: none;
        transition: box-shadow 0.5s ease;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 12px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        box-shadow: 0 1.6px 3.6px 0 Highlight, 0 0.3px 0.9px 0 Highlight;
      }
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={-1}
>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 12px;
          margin-left: 12px;
          margin-right: 0px;
          margin-top: 12px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 12px;
          margin-left: 0px;
          margin-right: 12px;
          margin-top: 12px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
</div>
`;

exports[`Card Item renders correctly when filling up the margins while being the middle item in a Vertical Card 1`] = `
<div
  className=
      ms-Stack
      ms-Card
      {
        align-items: stretch;
        border-radius: 2px;
        box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
        box-sizing: border-box;
        cursor: default;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: inherit;
        justify-content: flex-start;
        max-width: 286px;
        min-width: 212px;
        outline: none;
        transition: box-shadow 0.5s ease;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-top: 12px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        box-shadow: 0 1.6px 3.6px 0 Highlight, 0 0.3px 0.9px 0 Highlight;
      }
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={-1}
>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 12px;
          margin-right: 12px;
          margin-top: 12px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 12px;
          margin-left: 12px;
          margin-right: 12px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
</div>
`;

exports[`Card Item renders correctly when filling up the margins while being the only item in a Horizontal Card 1`] = `
<div
  className=
      ms-Stack
      ms-Card
      {
        align-items: flex-start;
        border-radius: 2px;
        box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
        box-sizing: border-box;
        cursor: default;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        justify-content: flex-start;
        max-width: 500px;
        min-width: 300px;
        outline: none;
        transition: box-shadow 0.5s ease;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-left: 12px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        box-shadow: 0 1.6px 3.6px 0 Highlight, 0 0.3px 0.9px 0 Highlight;
      }
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={-1}
>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
</div>
`;

exports[`Card Item renders correctly when filling up the margins while being the only item in a Vertical Card 1`] = `
<div
  className=
      ms-Stack
      ms-Card
      {
        align-items: stretch;
        border-radius: 2px;
        box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
        box-sizing: border-box;
        cursor: default;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: inherit;
        justify-content: flex-start;
        max-width: 286px;
        min-width: 212px;
        outline: none;
        transition: box-shadow 0.5s ease;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-top: 12px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        box-shadow: 0 1.6px 3.6px 0 Highlight, 0 0.3px 0.9px 0 Highlight;
      }
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={-1}
>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
</div>
`;

exports[`Card Item renders correctly when having tokens passed to it 1`] = `
<div
  className=
      ms-Stack
      ms-Card
      {
        align-items: stretch;
        border-radius: 2px;
        box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108);
        box-sizing: border-box;
        cursor: default;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: inherit;
        justify-content: flex-start;
        max-width: 286px;
        min-width: 212px;
        outline: none;
        transition: box-shadow 0.5s ease;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
      }
      & > *:not(:first-child) {
        margin-top: 12px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        box-shadow: 0 1.6px 3.6px 0 Highlight, 0 0.3px 0.9px 0 Highlight;
      }
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={-1}
>
  <div
    className=
        ms-StackItem
        ms-CardItem
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          flex-basis: auto;
          flex-shrink: 0;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 18px;
          font-weight: 400;
          height: auto;
          margin-bottom: 12px;
          margin-left: 8px;
          margin-right: 8px;
          margin-top: 12px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          width: auto;
        }
  >
    <div />
  </div>
</div>
`;
